# hexil

./: Cargo.toml  README.md  build.rs  plan.md
.github/workflows/: main.yml
src/: build.rs  lib.rs  logging.rs  main.rs  render.rs  renderer.rs  window.rs
src/app/: mod.rs  transfer_canvas_to_device.rs
src/render/: buffer_make.rs  canvas_bufs.rs  canvas_manager.rs  command_buffers.rs  consts.rs  framebuffer.rs  init_renderer_state.rs  instance_create.rs  lib_select.rs  make_swapchain.rs  pipeline.rs  queue_device_creation.rs  render_pass.rs  renderer_error.rs  select_physical_device.rs  subpass.rs  surface_create.rs  types.rs  window_wrappers.rs
src/render/window_wrappers/: pipeline_wrapper.rs
src/renderer/: gpu_handler.rs
src/renderer/gpu_handler/: context_settings.rs  device_select.rs
src/shaders/: canvas_frag.glsl  canvas_vert.glsl  hex_vert.glsl  tile_frag.glsl  tile_geometry.glsl
try_log/: Cargo.toml
try_log/src/: lib.rs
