workspace = { members = ["try_log"] }
[package]
name = "hexil"
version = "0.1.0"
edition = "2021"
authors = ["Lily McCabe <lily@lilymccabe.ca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
build-time = "0.1.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
palette = { version = "0.7.3", default-features = false, features = ["std", "serializing", "bytemuck", "wide", "phf"] }
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision", "send_guard", "serde"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot", "tracing", "tracing-serde"] }
try_log = { version = "0.1.0", path = "try_log" }
vulkano = { version = "0.34.1", features = ["serde", "document_unchecked"] }
vulkano-shaders = "0.34.0"
winit = { version = "0.29.4", features = ["serde", "rwh_05"] }
