[package]
name = "hexil"
version = "0.2.0"
edition = "2021"
authors = ["Lily McCabe <lily@lilymccabe.ca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics", "extern_crate_std", "must_cast"] }
palette = { version = "0.7.4", features = ["bytemuck", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
tracing = { version = "0.1.40", features = ["log-always"] }
vulkano = { version = "0.34.1", features = ["serde", "document_unchecked"] }
vulkano-util = "0.34.1"
winit = { version = "0.29.10", features = ["serde", "rwh_05"] }
